created a bio page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Afsanat ineza's portofolio</title>
 </head>
 <body>
-    <strong>hello world</strong>
+    <h1>Afsanat Ineza</h1>
+    She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em>
+    She is interested in <strong>front end development</strong> and comes from <em>Rwanda</em>
 </body>
 </html>
