--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Afsanat Ineza</h1>
     <p>
-        She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em>
-        She is interested in <strong>frontend development</strong> and comes from <em>Rwanda</em>
+        She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
+        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em>
     </p>
 </body>
 </html>
