edited the  bio page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Afsanat Ineza</h1>
     <p>
         <img src="#" alt="picture" width="400" height="500">
-She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em>
-She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em>
+She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
+She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
 she can be found on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
 </body>
