--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <h1>Afsanat Ineza</h1>
     <p>
-<img src="image/prof.png" alt="picture" >
+<img src="image/prof.png" alt="picture" width="300" height="400">
     </p>
 
         <h2>Biography</h2>
 
         <p>
-        She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em>
-        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em>
-        she can be found on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
+She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em>
+She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em>
+she can be found on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
 </body>
 </html> 
