linking the skills page

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@ She is a student majoring in <strong>Computer science</strong> and she will grad
 She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em>
 she can be found on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
+
+    <a href="skills.html">Click here to visit skills page</a>
 </body>
 </html> 
