linking the skills page

--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>skills page<title>
+    <title>skills page</title>
 </head>
 <body>
     <h1>Skills</h1>
