linking the skills page

--- a/skills.html
+++ b/skills.html
@@ -9,10 +9,10 @@
     <h1>Skills</h1>
 
  <p>
-• Programming Languages (java, python, C++)
-• Database design
-• Design thinking
-• Fluent Kinyarwanda, English, and French
+Programming Languages (java, python, C++)
+Database design
+ Design thinking
+ Fluent Kinyarwanda, English, and French
     </p>
 </body>
 </html> 
