--- a/skills.html
+++ b/skills.html
@@ -14,5 +14,6 @@ Database design
  Design thinking
  Fluent Kinyarwanda, English, and French
     </p>
+    <a href="index.html">home</a>
 </body>
 </html> 
