--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Afsanat ineza's portofolio</title>
 </head>
 <body>
+    <ul>
+        <li><a href= "#">Home</a></li>
+        <li><a href= "#">skills</a></li>
+        <li><a href= "#">coursework</a></li>
+        <li><a href= "#">experience</a></li>
+        <li><a href= "#">interests</a></li>
+        <li><a href= "#">projects</a></li>
+    </ul>
     <h1>Afsanat Ineza</h1>
     <p>
 <img src="image/prof.png" alt="picture" width="300" height="400">
