--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Afsanat ineza's portofolio</title>
 </head>
 <body>
+    <nav>
     <ul>
         <li><a href= "#">Home</a></li>
         <li><a href= "#">skills</a></li>
@@ -14,6 +15,8 @@
         <li><a href= "#">interests</a></li>
         <li><a href= "#">projects</a></li>
     </ul>
+</nav>
+
     <h1>Afsanat Ineza</h1>
     <p>
 <img src="image/prof.png" alt="picture" width="300" height="400">
@@ -22,9 +25,9 @@
         <h2>Biography</h2>
 
         <p>
-She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em>
-She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em>
-she can be found on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
+        She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
+        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
+        she can be found on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
 
     <a href="skills.html">Click here to visit skills page</a>
