--- a/experience.html
+++ b/experience.html
@@ -6,6 +6,15 @@
     <title>Experience page</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href= "index.html">Home</a></li>
+            <li><a href= "skills.html">skills</a></li>
+            <li><a href= "coursework.html">coursework</a></li>
+            <li><a href= "experience.html">experience</a></li>
+            <li><a href= "interests.html">interests</a></li>
+            <li><a href= "projects.html">projects</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
