--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <nav>
     <ul>
-        <li><a href= "#">Home</a></li>
-        <li><a href= "#">skills</a></li>
-        <li><a href= "#">coursework</a></li>
-        <li><a href= "#">experience</a></li>
-        <li><a href= "#">interests</a></li>
-        <li><a href= "#">projects</a></li>
+        <li><a href= "index.html">Home</a></li>
+        <li><a href= "skills.html">skills</a></li>
+        <li><a href= "coursework.html">coursework</a></li>
+        <li><a href= "experience.html">experience</a></li>
+        <li><a href= "interests.html">interests</a></li>
+        <li><a href= "projects.html">projects</a></li>
     </ul>
 </nav>
 
