--- a/skills.html
+++ b/skills.html
@@ -8,6 +8,17 @@
 <body>
     <h1>Skills</h1>
 
+    <nav>
+        <ul>
+            <li><a href= "index.html">Home</a></li>
+            <li><a href= "skills.html">skills</a></li>
+            <li><a href= "coursework.html">coursework</a></li>
+            <li><a href= "experience.html">experience</a></li>
+            <li><a href= "interests.html">interests</a></li>
+            <li><a href= "projects.html">projects</a></li>
+        </ul>
+    </nav>
+
  <p>
 Programming Languages (java, python, C++)
 Database design
