--- a/skills.html
+++ b/skills.html
@@ -20,10 +20,10 @@
     </nav>
 
  <p>
-Programming Languages (java, python, C++)
-Database design
- Design thinking
- Fluent Kinyarwanda, English, and French
+    Programming Languages (java, python, C++)<br>
+    Database design<br>
+    Design thinking<br>
+    Fluent Kinyarwanda, English, and French<br>
     </p>
     <a href="index.html">home</a>
 </body>
