--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afsanat ineza's portofolio</title>
-    <link rel= "menu style" href="style.css">
+    <link rel= "stylesheet" href="style.css">
 </head>
 <body>
     <nav>
