--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>
         She is a student majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
         She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
-        she can be found on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
+        Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
 
 </body>
