--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,7 @@
     Programming Languages (java, python, C++)<br>
     Database design<br>
     Design thinking<br>
-    Fluent Kinyarwanda, English, and French<br>
+    fluent Kinyarwanda, English, and French<br>
     </p>
     <a href="index.html">home</a>
 </body>
