--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
         Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
+    
+    <footer>&copy; Copyright 2020 HTML.am</footer>
 
 </body>
 </html> 
