--- a/coursework.html
+++ b/coursework.html
@@ -17,5 +17,7 @@
             <li><a href= "projects.html">projects</a></li>
         </ul>
     </nav>
+
+    <footer>&copy; Copyright Afsanat Ineza 2020 </footer>
 </body>
 </html>
