--- a/skills.html
+++ b/skills.html
@@ -26,5 +26,6 @@
     Design thinking<br>
     fluent Kinyarwanda, English, and French<br>
     </p>
+    <footer>&copy; Copyright Afsanat Ineza 2020 </footer>
 </body>
 </html> 
