--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
 
-    <footer>&copy; Copyright Afsanat Ineza 2020 </footer>
+    <footer>&copy; Afsanat Ineza 2020 </footer>
 
 </body>
 </html> 
