--- a/experience.html
+++ b/experience.html
@@ -18,6 +18,6 @@
         </ul>
     </nav>
 
-    <footer>&copy; Copyright Afsanat Ineza 2020 </footer>
+    <footer>&copy; Afsanat Ineza 2020 </footer>
 </body>
 </html>
