--- a/interests.html
+++ b/interests.html
@@ -18,6 +18,11 @@
         </ul>
     </nav>
 
+    <p>
+        She is a student at Ahesi University, majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
+        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
+        Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
+    </p>
     <footer>&copy; Afsanat Ineza 2020 </footer>
 </body>
 </html>
