--- a/experience.html
+++ b/experience.html
@@ -18,10 +18,21 @@
         </ul>
     </nav>
 
+    <h1>Experience</h1>
     <p>
-        She is a student at Ahesi University, majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
-        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
-        Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
+        <Strong>Computer science department at Ashesi university from 2020 – Present</Strong>><br>
+           <em>works as a Programming Tutor</em><br>
+            • Helping first-year students with in-class activities during their Monday and Wednesday classes.<br>
+            • Organizing and leading Saturday’s evening tutorial sessions.<br>
+
+            <strong>Internship at Kigali Innovation City at Kacyiru, Kigali from June 2019 – Aug 2019</strong><br>
+            <em>worked as Strategy and program development</em><br>
+            • Interviewed stakeholders in the Rwandan ecosystem to gather insights on Rwandan innovations.<br>
+            • Developed a customer journey map showing key players in the ecosystem and their roles.<br>
+
+            <strong>Internship at Tigo Rwanda – Kacyiru, Kigali April 2017 – June 2017</strong>
+            <em>worked as a Commercial department intern</em><br>
+            • Calculated the customer churn rate using R language <br>
     </p>
 
     <footer>&copy; Afsanat Ineza 2020 </footer>
