--- a/coursework.html
+++ b/coursework.html
@@ -18,10 +18,14 @@
         </ul>
     </nav>
 
+    <h1>CS CourseWork</h1>
+
     <p>
-        She is a student at Ahesi University, majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
-        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
-        Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
+        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Programming for CS</a><br>
+        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Data Structures</a><br>
+        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Database</a><br>
+        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Web technologies</a><br>
+        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">intermidiate computer programming</a><br>
     </p>
     <footer>&copy; Afsanat Ineza 2020 </footer>
 </body>
