--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,25 @@
         </ul>
     </nav>
 
+    <h1>Projects</h1>
+    <h2>Database project</h2>
     <p>
-        She is a student at Ahesi University, majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
-        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
-        Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
+        • Design an efficient database for Ashesi University that can allow the database administrator (Ashesi
+employee) to store every capstone project done by Ashesi students and allows
+students to retrieve this information easily at any time.<br>
+•    This database keeps track of capstone projects that have already been done and the group of people who implemented these projects.
+The end-users or those retrieving the information should be able to tell the supervisor of the
+project or if the project received external support. 
+
+•   For easy access and retrieval, these capstone
+projects were categorized according to the academic department in which the
+students implementing it are found.
+    </p>
+
+    <h2>Google Get Ahead Program</h2>
+    <p>
+        • participated in an 8 weeks virtual program for selected Cs students from all over EMEA.<br>
+        • The program involved technical challenges, YouTube live trainings and interview workshops.<br>
     </p>
 
     <footer>&copy; Afsanat Ineza 2020 </footer>
