--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
 
     <h1>Experience</h1>
     <p>
-        <Strong>Computer science department at Ashesi university from 2020 – Present</Strong>><br>
+        <Strong>Computer science department at Ashesi university from 2020 – Present</Strong><br>
            <em>works as a Programming Tutor</em><br>
             • Helping first-year students with in-class activities during their Monday and Wednesday classes.<br>
             • Organizing and leading Saturday’s evening tutorial sessions.<br>
@@ -30,7 +30,7 @@
             • Interviewed stakeholders in the Rwandan ecosystem to gather insights on Rwandan innovations.<br>
             • Developed a customer journey map showing key players in the ecosystem and their roles.<br>
 
-            <strong>Internship at Tigo Rwanda – Kacyiru, Kigali April 2017 – June 2017</strong>
+            <strong>Internship at Tigo Rwanda – Kacyiru, Kigali April 2017 – June 2017</strong><br>
             <em>worked as a Commercial department intern</em><br>
             • Calculated the customer churn rate using R language <br>
     </p>
