--- a/interests.html
+++ b/interests.html
@@ -17,12 +17,33 @@
             <li><a href= "projects.html">projects</a></li>
         </ul>
     </nav>
+    <h1>INTERESTS/CO-CURRICULAR ACTIVITIES</h1>
+        <h2>Ashesi Student Council committee at Ashesi University from August 2019 – present</h2><br>
+        <em>Outreach committee Secretary</em><br>
+        <p>• Taking notes at every meeting and ensuring that everyone presents their deliverables at the time set.<br>
+            • Booking the meeting places, drafting emails, and designing google forms for upcoming events.<br>
+        </p>
 
-    <p>
-        She is a student at Ahesi University, majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
-        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
-        Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
-    </p>
+<h2>Rwandan Community committee at Ashesi University from 2019 – Present</h2><br>
+<em>Treasurer</em><br>
+<p>
+    • Collecting money from Rwandan community members at Ashesi and budgeting according to activities
+    planned.
+</p>
+
+<h2>Ashesi Leo club at Ashesi University from 2018 - present</h2><br>
+<em>club member</em><br>
+<p>
+    • Serving and organizing charitable activities to the community of Berekuso in Ghana.<br>
+
+</p>
+
+<h2>360 club from 2018 - 2019</h2><br>
+<em>Co-founder</em><br>
+<p>
+    • Providing mentorship, academic, and ethical support to high school students in Ghana. <br>
+</p>
+
     <footer>&copy; Afsanat Ineza 2020 </footer>
 </body>
 </html>
