--- a/skills.html
+++ b/skills.html
@@ -21,10 +21,10 @@
     <h1>Skills</h1>
 
  <p>
-    Programming Languages (java, python, C++)<br>
-    Database design<br>
-    Design thinking<br>
-    fluent Kinyarwanda, English, and French<br>
+    • Programming Languages (java, python, C++)<br>
+    • Database design<br>
+    • Design thinking<br>
+    • Fluent Kinyarwanda, English, and French<br>
     </p>
     <footer>&copy; Afsanat Ineza 2020 </footer>
 </body>
