--- a/coursework.html
+++ b/coursework.html
@@ -21,11 +21,11 @@
     <h1>CS CourseWork</h1>
 
     <p>
-        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Programming for CS</a><br>
-        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Data Structures</a><br>
-        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Database</a><br>
-        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">Web technologies</a><br>
-        <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">intermidiate computer programming</a><br>
+        <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Programming for CS</a><br>
+        <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Data Structures</a><br>
+        <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Database</a><br>
+        <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Web technologies</a><br>
+        <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">intermidiate computer programming</a><br>
     </p>
     <footer>&copy; Afsanat Ineza 2020 </footer>
 </body>
