--- a/experience.html
+++ b/experience.html
@@ -20,17 +20,17 @@
 
     <h1>Experience</h1>
     <p>
-        <Strong>Computer science department at Ashesi university from 2020 – Present</Strong><br>
+        <h2>Computer science department at Ashesi university from 2020 – Present</h2><br>
            <em>works as a Programming Tutor</em><br>
             • Helping first-year students with in-class activities during their Monday and Wednesday classes.<br>
             • Organizing and leading Saturday’s evening tutorial sessions.<br>
 
-            <strong>Internship at Kigali Innovation City at Kacyiru, Kigali from June 2019 – Aug 2019</strong><br>
+            <h2>Internship at Kigali Innovation City at Kacyiru, Kigali from June 2019 – Aug 2019</h2><br>
             <em>worked as Strategy and program development</em><br>
             • Interviewed stakeholders in the Rwandan ecosystem to gather insights on Rwandan innovations.<br>
             • Developed a customer journey map showing key players in the ecosystem and their roles.<br>
 
-            <strong>Internship at Tigo Rwanda – Kacyiru, Kigali April 2017 – June 2017</strong><br>
+            <h2>Internship at Tigo Rwanda – Kacyiru, Kigali April 2017 – June 2017</h2><br>
             <em>worked as a Commercial department intern</em><br>
             • Calculated the customer churn rate using R language <br>
     </p>
