--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
     <ul>
-        <li><a href= "index.html">Home</a></li>
+        <li><a class= "highlighted" href= "index.html">Home</a></li>
         <li><a href= "skills.html">skills</a></li>
         <li><a href= "coursework.html">coursework</a></li>
         <li><a href= "experience.html">experience</a></li>
