--- a/coursework.html
+++ b/coursework.html
@@ -27,6 +27,6 @@
         <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Web technologies</a><br>
         <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">intermidiate computer programming</a><br>
     </p>
-    <footer>&copy; Afsanat Ineza 2020 </footer>
+    <footer>&copy; Afsanat Ineza 2020. All Rights Reserved </footer>
 </body>
 </html>
