--- a/experience.html
+++ b/experience.html
@@ -35,6 +35,6 @@
             • Calculated the customer churn rate using R language <br>
     </p>
 
-    <footer>&copy; Afsanat Ineza 2020 </footer>
+    <footer>&copy; Afsanat Ineza 2020. All Rights Reserved </footer>
 </body>
 </html>
