--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
     
 </body>
 
-<footer>&copy; Afsanat Ineza 2020 </footer>
+<footer>&copy; Afsanat Ineza 2020. All Rights Reserved </footer>
 </html> 
