--- a/interests.html
+++ b/interests.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interests page</title>
+    <style> 
+        #footer { 
+            position: fixed; 
+            padding: 10px 10px 0px 10px; 
+            bottom: 0; 
+            width: 100%; 
+            height: 40px; 
+            background:wheat; 
+        } 
+    </style> 
     <link rel= "stylesheet" href="style.css">
 </head>
 <body>
@@ -44,6 +54,6 @@
     • Providing mentorship, academic, and ethical support to high school students in Ghana. <br>
 </p>
 
-    <footer>&copy; Afsanat Ineza 2020 </footer>
+<div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </body>
 </html>
