--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,6 @@ students implementing it are found.
         • The program involved technical challenges, YouTube live trainings and interview workshops.<br>
     </p>
 
-    <footer>&copy; Afsanat Ineza 2020 </footer>
+    <footer>&copy; Afsanat Ineza 2020. All Rights Reserved </footer>
 </body>
 </html>
