--- a/skills.html
+++ b/skills.html
@@ -26,6 +26,6 @@
     • Design thinking<br>
     • Fluent Kinyarwanda, English, and French<br>
     </p>
-    <footer>&copy; Afsanat Ineza 2020 </footer>
+    <footer>&copy; Afsanat Ineza 2020. All Rights Reserved </footer>
 </body>
 </html> 
