--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience page</title>
+    <style> 
+        #footer { 
+            position: fixed; 
+            padding: 10px 10px 0px 10px; 
+            bottom: 0; 
+            width: 100%; 
+            height: 30px; 
+            background:wheat; 
+        } 
+    </style> 
     <link rel= "stylesheet" href="style.css">
 </head>
 <body>
@@ -35,6 +45,6 @@
             • Calculated the customer churn rate using R language <br>
     </p>
 
-    <footer>&copy; Afsanat Ineza 2020. All Rights Reserved </footer>
+    <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </body>
 </html>
