--- a/skills.html
+++ b/skills.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>skills page</title>
+    <style> 
+        #footer { 
+            position: fixed; 
+            padding: 10px 10px 0px 10px; 
+            bottom: 0; 
+            width: 100%; 
+            height: 30px; 
+            background:wheat; 
+        } 
+    </style> 
     <link rel= "stylesheet" href="style.css">
 </head>
 <body>
@@ -26,6 +36,6 @@
     • Design thinking<br>
     • Fluent Kinyarwanda, English, and French<br>
     </p>
-    <footer>&copy; Afsanat Ineza 2020. All Rights Reserved </footer>
+    <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </body>
 </html> 
