--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             bottom: 0; 
             width: 100%; 
             height: 30px; 
-            background:wheat; 
+            background:darkgray; 
         } 
     </style> 
     <link rel= "stylesheet" href="style.css">
