--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <nav>
-    <ul>
+    <ul class="nav">
         <li><a class= "highlighted" href= "index.html">Home</a></li>
         <li><a href= "skills.html">skills</a></li>
         <li><a href= "coursework.html">coursework</a></li>
