--- a/coursework.html
+++ b/coursework.html
@@ -28,7 +28,7 @@
         </ul>
     </nav>
 
-    <h1>CS CourseWork</h1>
+    <h1>CS COURSEWORK</h1>
 
     <p>
         <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Programming for CS</a><br>
