--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
         </ul>
     </nav>
 
-    <h1>Experience</h1>
+    <h1>EXPERIENCE</h1>
     <p>
         <h2>Computer science department at Ashesi university from 2020 – Present</h2><br>
            <em>works as a Programming Tutor</em><br>
