--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         </ul>
     </nav>
 
-    <h1>Projects</h1>
+    <h1>PROJECTS</h1>
     <h2>Database project</h2>
     <p>
         • Design an efficient database for Ashesi University that can allow the database administrator (Ashesi
