--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
             <li><a href= "projects.html">projects</a></li>
         </ul>
     </nav>
-    <h1>Skills</h1>
+    <h1>SKILLS</h1>
 
  <p>
     • Programming Languages (java, python, C++)<br>
