--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <nav>
     <ul class="nav">
         <li><a class= "highlighted" href= "index.html">Home</a></li>
-        <li><a href= "skills.html">skills</a></li>
-        <li><a href= "coursework.html">coursework</a></li>
-        <li><a href= "experience.html">experience</a></li>
-        <li><a href= "interests.html">interests</a></li>
-        <li><a href= "projects.html">projects</a></li>
+        <li><a class= "highlighted" href= "skills.html">skills</a></li>
+        <li><a class= "highlighted" href= "coursework.html">coursework</a></li>
+        <li><a class= "highlighted" href= "experience.html">experience</a></li>
+        <li><a class= "highlighted" href= "interests.html">interests</a></li>
+        <li><a class= "highlighted" href= "projects.html">projects</a></li>
     </ul>
 </nav>
 
