--- a/skills.html
+++ b/skills.html
@@ -20,12 +20,12 @@
 
     <nav>
         <ul>
-            <li><a href= "index.html">Home</a></li>
-            <li><a href= "skills.html">skills</a></li>
-            <li><a href= "coursework.html">coursework</a></li>
-            <li><a href= "experience.html">experience</a></li>
-            <li><a href= "interests.html">interests</a></li>
-            <li><a href= "projects.html">projects</a></li>
+            <li><a class= "highlighted" href= "index.html">Home</a></li>
+            <li><a class= "highlighted" href= "skills.html">skills</a></li>
+            <li><a class= "highlighted" href= "coursework.html">coursework</a></li>
+            <li><a class= "highlighted" href= "experience.html">experience</a></li>
+            <li><a class= "highlighted" href= "interests.html">interests</a></li>
+            <li><a class= "highlighted" href= "projects.html">projects</a></li>
         </ul>
     </nav>
     <h1>SKILLS</h1>
