--- a/coursework.html
+++ b/coursework.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="nav">
             <li><a  href= "index.html">Home</a></li>
             <li><a  href= "skills.html">skills</a></li>
             <li><a class= "highlighted" href= "coursework.html">coursework</a></li>
