--- a/interests.html
+++ b/interests.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="nav">
             <li><a href= "index.html">Home</a></li>
             <li><a  href= "skills.html">skills</a></li>
             <li><a  href= "coursework.html">coursework</a></li>
