--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,7 @@
 <body>
 
     <nav>
-        <ul>
+        <ul class="nav">
             <li><a  href= "index.html">Home</a></li>
             <li><a class= "highlighted" href= "skills.html">skills</a></li>
             <li><a  href= "coursework.html">coursework</a></li>
