--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </ul>
 </nav>
 
+<div style="text-align: center;">
     <h1>Afsanat Ineza</h1>
     <p>
 <img src="image/prof.png" alt="picture" width="300" height="400">
@@ -40,7 +41,7 @@
         She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
         Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
-
+</div>
     
 </body>
 
