--- a/coursework.html
+++ b/coursework.html
@@ -28,6 +28,7 @@
         </ul>
     </nav>
 
+    <div style="text-align: center;"></div>
     <h1>CS COURSEWORK</h1>
 
     <p>
@@ -37,6 +38,7 @@
         <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Web technologies</a><br>
         <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">intermidiate computer programming</a><br>
     </p>
+</div>
     <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </body>
 </html>
