--- a/experience.html
+++ b/experience.html
@@ -28,6 +28,7 @@
         </ul>
     </nav>
 
+    <div style="text-align: center;"></div>
     <h1>EXPERIENCE</h1>
     <p>
         <h2>Computer science department at Ashesi university from 2020 – Present</h2><br>
@@ -44,6 +45,7 @@
             <em>worked as a Commercial department intern</em><br>
             • Calculated the customer churn rate using R language <br>
     </p>
+</div>
 
     <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </body>
