--- a/interests.html
+++ b/interests.html
@@ -28,6 +28,7 @@
             <li><a href= "projects.html">projects</a></li>
         </ul>
     </nav>
+    <div style="text-align: center;"></div>
     <h1>INTERESTS/CO-CURRICULAR ACTIVITIES</h1>
         <h2>Ashesi Student Council committee at Ashesi University from August 2019 – present</h2><br>
         <em>Outreach committee Secretary</em><br>
@@ -54,7 +55,7 @@
 <p>
     • Providing mentorship, academic, and ethical support to high school students in Ghana. <br>
 </p>
-
+</div>
 <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </body>
 </html>
