--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@
         </ul>
     </nav>
 
+    <div style="text-align: center;"></div>
     <h1>PROJECTS</h1>
     <h2>Database project</h2>
     <p>
@@ -48,6 +49,7 @@ students implementing it are found.
         • participated in an 8 weeks virtual program for selected Cs students from all over EMEA.<br>
         • The program involved technical challenges, YouTube live trainings and interview workshops.<br>
     </p>
+</div>
 
     <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </body>
