--- a/skills.html
+++ b/skills.html
@@ -28,6 +28,8 @@
             <li><a href= "projects.html">projects</a></li>
         </ul>
     </nav>
+
+    <div style="text-align: center;"></div>
     <h1>SKILLS</h1>
 
  <p>
@@ -36,6 +38,7 @@
     • Design thinking<br>
     • Fluent Kinyarwanda, English, and French<br>
     </p>
-    <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
+    </div>
 </body>
+<div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </html> 
