--- a/coursework.html
+++ b/coursework.html
@@ -7,6 +7,7 @@
     <style> 
         #footer { 
             position: fixed; 
+            text-align: center;
             padding: 10px 10px 0px 10px; 
             bottom: 0; 
             width: 100%; 
@@ -28,8 +29,8 @@
         </ul>
     </nav>
 
-    <div style="text-align: center;"></div>
-    <h1>CS COURSEWORK</h1>
+    <div style="text-align: center; font-size: large;">
+    <h1>CS COURSEWORK</h1><br>
 
     <p>
         <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science.html">Programming for CS</a><br>
