--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,8 @@
     <title>Experience page</title>
     <style> 
         #footer { 
-            position: fixed; 
+            position: fixed;
+            text-align: center; 
             padding: 10px 10px 0px 10px; 
             bottom: 0; 
             width: 100%; 
@@ -28,22 +29,22 @@
         </ul>
     </nav>
 
-    <div style="text-align: center;"></div>
-    <h1>EXPERIENCE</h1>
+    <div style="text-align: center;font-size: large;">
+    <h1>EXPERIENCE</h1><br>
     <p>
-        <h2>Computer science department at Ashesi university from 2020 – Present</h2><br>
-           <em>works as a Programming Tutor</em><br>
+        <h2>Computer science department at Ashesi university from 2020 – Present</h2>
+           <strong>works as a Programming Tutor</strong><br>
             • Helping first-year students with in-class activities during their Monday and Wednesday classes.<br>
-            • Organizing and leading Saturday’s evening tutorial sessions.<br>
+            • Organizing and leading Saturday’s evening tutorial sessions.<br><br>
 
-            <h2>Internship at Kigali Innovation City at Kacyiru, Kigali from June 2019 – Aug 2019</h2><br>
-            <em>worked as Strategy and program development</em><br>
+            <h2>Internship at Kigali Innovation City at Kacyiru, Kigali from June 2019 – Aug 2019</h2>
+            <strong>worked as Strategy and program development</strong><br>
             • Interviewed stakeholders in the Rwandan ecosystem to gather insights on Rwandan innovations.<br>
-            • Developed a customer journey map showing key players in the ecosystem and their roles.<br>
+            • Developed a customer journey map showing key players in the ecosystem and their roles.<br><br>
 
-            <h2>Internship at Tigo Rwanda – Kacyiru, Kigali April 2017 – June 2017</h2><br>
-            <em>worked as a Commercial department intern</em><br>
-            • Calculated the customer churn rate using R language <br>
+            <h2>Internship at Tigo Rwanda – Kacyiru, Kigali April 2017 – June 2017</h2>
+            <strong>worked as a Commercial department intern</strong><br>
+            • Calculated the customer churn rate using R language <br><br>
     </p>
 </div>
 
