--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style> 
         #footer { 
             position: fixed; 
+            text-align: center;
             padding: 10px 10px 0px 10px; 
             bottom: 0; 
             width: 100%; 
@@ -28,17 +29,17 @@
     </ul>
 </nav>
 
-<div style="text-align: center;">
-    <h1>Afsanat Ineza</h1>
+<div style="text-align: center; font-size: large;">
+    <h1>Afsanat Ineza</h1><br>
     <p>
 <img src="image/prof.png" alt="picture" width="300" height="400">
     </p>
 
-        <h2>Biography</h2>
+        <h2>Biography</h2><br>
 
         <p>
-        She is a student at Ahesi University, majoring in <strong>Computer science</strong> and she will graduate in <em>2022</em><br>
-        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda</em><br>
+        She is a student at Ahesi University, majoring in <strong>Computer science</strong> and she will graduate in <em>2022.</em><br>
+        She is interested in <strong>frontend development</strong> and she is from <em>Rwanda.</em><br>
         Connect with her on <a href="https://www.linkedin.com/in/afsanat-ineza-a2602b172">linkedin</a>
     </p>
 </div>
