--- a/interests.html
+++ b/interests.html
@@ -28,30 +28,30 @@
             <li><a href= "projects.html">projects</a></li>
         </ul>
     </nav>
-    <div style="text-align: center;"></div>
-    <h1>INTERESTS/CO-CURRICULAR ACTIVITIES</h1>
-        <h2>Ashesi Student Council committee at Ashesi University from August 2019 – present</h2><br>
-        <em>Outreach committee Secretary</em><br>
+    <div style="text-align: center;font-size: large;">
+    <h1>INTERESTS/CO-CURRICULAR ACTIVITIES</h1><br>
+        <h2>Ashesi Student Council committee at Ashesi University from August 2019 – present</h2>
+        <strong>Outreach committee Secretary</strong><br>
         <p>• Taking notes at every meeting and ensuring that everyone presents their deliverables at the time set.<br>
-            • Booking the meeting places, drafting emails, and designing google forms for upcoming events.<br>
+            • Booking the meeting places, drafting emails, and designing google forms for upcoming events.<br><br>
         </p>
 
-<h2>Rwandan Community committee at Ashesi University from 2019 – Present</h2><br>
-<em>Treasurer</em><br>
+<h2>Rwandan Community committee at Ashesi University from 2019 – Present</h2>
+<strong>Treasurer</strong><br>
 <p>
     • Collecting money from Rwandan community members at Ashesi and budgeting according to activities
-    planned.
+    planned.<br><br>
 </p>
 
-<h2>Ashesi Leo club at Ashesi University from 2018 - present</h2><br>
-<em>club member</em><br>
+<h2>Ashesi Leo club at Ashesi University from 2018 - present</h2>
+<strong>club member</strong><br>
 <p>
-    • Serving and organizing charitable activities to the community of Berekuso in Ghana.<br>
+    • Serving and organizing charitable activities to the community of Berekuso in Ghana.<br><br>
 
 </p>
 
-<h2>360 club from 2018 - 2019</h2><br>
-<em>Co-founder</em><br>
+<h2>360 club from 2018 - 2019</h2>
+<strong>Co-founder</strong><br>
 <p>
     • Providing mentorship, academic, and ethical support to high school students in Ghana. <br>
 </p>
