--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <style> 
         #footer { 
             position: fixed; 
+            text-align: center;
             padding: 10px 10px 0px 10px; 
             bottom: 0; 
             width: 100%; 
@@ -28,20 +29,18 @@
         </ul>
     </nav>
 
-    <div style="text-align: center;"></div>
-    <h1>PROJECTS</h1>
+    <div style="text-align: center;font-size: large;">
+    <h1>PROJECTS</h1><br>
     <h2>Database project</h2>
     <p>
-        • Design an efficient database for Ashesi University that can allow the database administrator (Ashesi
-employee) to store every capstone project done by Ashesi students and allows
-students to retrieve this information easily at any time.<br>
-•    This database keeps track of capstone projects that have already been done and the group of people who implemented these projects.
-The end-users or those retrieving the information should be able to tell the supervisor of the
-project or if the project received external support. 
+• Design an efficient database for Ashesi University that can allow the database administrator (Ashesi
+employee) to store every capstone project done by Ashesi students. <br>
+•    This database keeps track of capstone projects that have already been done and the group of people who implemented these projects.<br>
+• those retrieving the information should be able to tell the supervisor of the
+project or if the project received external support. <br>
 
-•   For easy access and retrieval, these capstone
-projects were categorized according to the academic department in which the
-students implementing it are found.
+• For easy access and retrieval, these capstone projects were categorized according to the academic department in which the
+students implementing it are found.<br><br>
     </p>
 
     <h2>Google Get Ahead Program</h2>
