--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,7 @@
     <style> 
         #footer { 
             position: fixed; 
+            text-align: center;
             padding: 10px 10px 0px 10px; 
             bottom: 0; 
             width: 100%; 
@@ -29,8 +30,8 @@
         </ul>
     </nav>
 
-    <div style="text-align: center;"></div>
-    <h1>SKILLS</h1>
+    <div style="text-align: center; font-size: large; ">
+    <h1>SKILLS</h1><br>
 
  <p>
     • Programming Languages (java, python, C++)<br>
@@ -40,5 +41,6 @@
     </p>
     </div>
 </body>
+
 <div id="footer">&copy; Afsanat Ineza 2020. All Rights Reserved </div> 
 </html> 
