--- a/skills.html
+++ b/skills.html
@@ -37,6 +37,8 @@
     • Programming Languages (java, python, C++)<br>
     • Database design<br>
     • Design thinking<br>
+    • SQL<br>
+    • Microsoft word and Microsoft excel<br>
     • Fluent Kinyarwanda, English, and French<br>
     </p>
     </div>
