--- a/experience.html
+++ b/experience.html
@@ -32,7 +32,7 @@
     <div style="text-align: center;font-size: large;">
     <h1>EXPERIENCE</h1><br>
     <p>
-        <h2>Computer science department at Ashesi university from 2020 – Present</h2>
+        <h2>Computer science department at <a href="https://www.ashesi.edu.gh/about.html">Ashesi university</a>  from 2020 – Present</h2>
            <strong>works as a Programming Tutor</strong><br>
             • Helping first-year students with in-class activities during their Monday and Wednesday classes.<br>
             • Organizing and leading Saturday’s evening tutorial sessions.<br><br>
